--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: #hexcode; /* Replace '#hexcode' with the color of the top left pixel */
+            background-color: #212b3f;
         }
         .image-container {
             display: flex;
