--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
         }
         img {
             max-width: 100%;
-            height: auto;
+            max-height: 100vh;
+            object-fit: contain;
         }
     </style>
 </head>
