--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100%;
-            width: 100%;
+            height: 100vh;
+            width: 100vw;
             overflow: hidden;
         }
         img {
             max-width: 100%;
-            max-height: 100vh;
+            max-height: 100%;
             object-fit: contain;
         }
     </style>
